# privacy-filter-service

./: .gitignore  AGENTS.md  OPF-for-agent.md  README.md  README_INIT.md  config.toml.example  llm_deployment.md  pyproject.toml
benchmarks/: README.md  local_fallback_results.json  remote_opf_vs_local_fallback.json  remote_opf_vs_local_fallback.md  results.json  tail_latency_results.json
config/: env.example
docs/: llms-full.txt
hooks/: _lib.sh  commit-msg  pf_fallback.py  pre-commit
install/: install-hooks.sh  install-service.sh  uninstall.sh
scripts/: benchmark.py  benchmark_local_fallback.py  benchmark_tail_latency.py  compare_remote_opf_vs_fallback.py
src/privacy_filter_service/: app.py  config.py  fallback_app.py  fast_predict.py  local_fallback.py  logging_setup.py  models.py  opf_engine.py  viterbi_gpu.py
systemd/: privacy-filter.service
tests/: test_batch.py  test_config.py  test_fallback_app.py  test_fast_predict.py  test_health.py  test_local_fallback.py  test_logging.py  test_models.py  test_opf_engine.py  test_redact.py
tests/e2e/: remote_fallback.sh  smoke.sh
tests/integration/: common.sh  mock_service.py  run_all.sh  test_commit_msg.sh  test_commit_msg_clean.sh  test_commit_msg_comment.sh  test_commit_msg_empty_redact.sh  test_commit_msg_fallback_service.sh  test_commit_msg_redact.sh  test_concurrent.sh  test_fail_closed.sh  test_fallback_patterns.sh  test_fallback_redact.sh  test_fallback_service.sh  test_git_config_url.sh  test_install.sh  test_lfs_pointer.sh  test_lib.sh  test_malformed_response.sh  test_no_verify.sh  test_pre_commit.sh  test_pre_commit_binary.sh  test_pre_commit_clean.sh  test_pre_commit_oversize.sh  test_pre_commit_partial.sh  test_pre_commit_pii.sh  test_service_down.sh  test_skip_env.sh
